--- a/index.html
+++ b/index.html
@@ -77,4 +77,10 @@
   </section>
 
   <footer>
-    <p>
+    <p>DVargas Barber Shop<br>
+      CNPJ: 49.498.848/0001-81
+    </p>
+  </footer>
+
+</body>
+</html>
