--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     header h1 {
       font-size: 48px;
       margin: 0;
-      color: var(--gold);
+      color: #eee;
       letter-spacing: 2px;
     }
 
