--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   <header id="home">
     <!-- Substitua o src pela logo da barbearia -->
     <div>
-      <img src="https://ibb.co/9k6wFcXc" alt="logo DVargas Barber Shop">
+      <img src="https://i.ibb.co/392fD4X4/Adobe-Express-file.png" alt="logo DVargas Barber Shop">
       <h1>Dvargas Barber Shop</h1>
       <p>Cortes masculinos • Barba • Estilo</p>
     </div>
