--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <h2>Galeria</h2>
     <div class="gallery">
       <!-- Substitua as imagens pelas fotos reais -->
-      <img src="https://images.unsplash.com/photo-1517832606299-7ae9b720a186" alt="Corte 1">
+      <img src="https://instagram.fpoa11-1.fna.fbcdn.net/v/t39.30808-6/468670684_18209000974288879_1407581585623917499_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=104&ig_cache_key=MzIxMjM0NzUwNDI2MjgxMjMzMA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuQzMifQ%3D%3D&_nc_ohc=Tgx3NNd4lUgQ7kNvwFBn5vH&_nc_oc=AdnDa3Qixn_gJ22U6Yzl-tgTTkeDwJj07ZlSfb3PYwnBL46eh7AEEIGbSFbm4M6J8ZLT2YUGsxiLD277UZXr59Pr&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=instagram.fpoa11-1.fna&_nc_gid=kSVlXkgmzyF2EKXrZ_QEQA&oh=00_Afms7i9kfB3L9MRngehPzJYIyZLoesGh1Wt3vdV9FaJKLA&oe=694F28ED" alt="Corte 1">
       <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9" alt="Corte 2">
       <img src="https://images.unsplash.com/photo-1621605810051-809d2b63f2c1" alt="Corte 3">
       <img src="https://images.unsplash.com/photo-1596728325488-58c87691e9af" alt="Corte 4">
