--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
     <h2>Serviços</h2>
     <div class="services">
       <div class="service-card">
-        <h3>Corte Masculino</h3>
+        <h3>Corte</h3>
         <p class="price">R$ 35,00</p>
       </div>
       <div class="service-card">
-        <h3>Barba Tradicional</h3>
+        <h3>Barba</h3>
         <p class="price">R$ 30,00</p>
       </div>
       <div class="service-card">
@@ -219,8 +219,28 @@
         <p class="price">R$ 50,00</p>
       </div>
       <div class="service-card">
-        <h3>Acabamento / Navalha</h3>
+        <h3>Sobrancelha</h3>
+        <p class="price">R$ 5,00</p>
+      </div>
+      <div class="service-card">
+        <h3>Limpeza de pele</h3>
         <p class="price">R$ 20,00</p>
+      </div>
+      <div class="service-card">
+        <h3>Luzes</h3>
+        <p class="price">R$ 120,00</p>
+      </div>
+      <div class="service-card">
+        <h3>Platinado</h3>
+        <p class="price">R$ 140,00</p>
+      </div>
+      <div class="service-card">
+        <h3>Depilação nasal</h3>
+        <p class="price">R$ 10,00</p>
+      </div>
+      <div class="service-card">
+        <h3>Depilação nariz</h3>
+        <p class="price">R$ 10,00</p>
       </div>
     </div>
   </section>
@@ -229,21 +249,22 @@
     <h2>Galeria</h2>
     <div class="gallery">
       <!-- Substitua as imagens pelas fotos reais -->
-      <img src="https://instagram.fpoa11-1.fna.fbcdn.net/v/t39.30808-6/468670684_18209000974288879_1407581585623917499_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=104&ig_cache_key=MzIxMjM0NzUwNDI2MjgxMjMzMA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuQzMifQ%3D%3D&_nc_ohc=Tgx3NNd4lUgQ7kNvwFBn5vH&_nc_oc=AdnDa3Qixn_gJ22U6Yzl-tgTTkeDwJj07ZlSfb3PYwnBL46eh7AEEIGbSFbm4M6J8ZLT2YUGsxiLD277UZXr59Pr&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=instagram.fpoa11-1.fna&_nc_gid=kSVlXkgmzyF2EKXrZ_QEQA&oh=00_Afms7i9kfB3L9MRngehPzJYIyZLoesGh1Wt3vdV9FaJKLA&oe=694F28ED" alt="Corte 1">
-      <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9" alt="Corte 2">
-      <img src="https://images.unsplash.com/photo-1621605810051-809d2b63f2c1" alt="Corte 3">
-      <img src="https://images.unsplash.com/photo-1596728325488-58c87691e9af" alt="Corte 4">
-      <img src="https://images.unsplash.com/photo-1622288432450-277d0fef5ed3" alt="Corte 5">
-      <img src="https://images.unsplash.com/photo-1620331311520-246422fd82f9" alt="Corte 6">
-      <img src="https://images.unsplash.com/photo-1585747860715-2ba37e788b70" alt="Corte 7">
-      <img src="https://images.unsplash.com/photo-1600334129128-685c5582fd35" alt="Corte 8">
-      <img src="https://images.unsplash.com/photo-1593702295094-5dbe84fba7b4" alt="Corte 9">
+      <img src="https://instagram.fpoa11-1.fna.fbcdn.net/v/t39.30808-6/468670684_18209000974288879_1407581585623917499_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=104&ig_cache_key=MzIxMjM0NzUwNDI2MjgxMjMzMA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTgwMC5zZHIuQzMifQ%3D%3D&_nc_ohc=Tgx3NNd4lUgQ7kNvwFBn5vH&_nc_oc=AdnDa3Qixn_gJ22U6Yzl-tgTTkeDwJj07ZlSfb3PYwnBL46eh7AEEIGbSFbm4M6J8ZLT2YUGsxiLD277UZXr59Pr&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=instagram.fpoa11-1.fna&_nc_gid=kSVlXkgmzyF2EKXrZ_QEQA&oh=00_Afms7i9kfB3L9MRngehPzJYIyZLoesGh1Wt3vdV9FaJKLA&oe=694F28ED" alt="Imagem 1">
+      <img src="https://instagram.fpoa11-1.fna.fbcdn.net/v/t51.29350-15/345152329_771154354660019_9156302301736153045_n.heic?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkZFRUQuaW1hZ2VfdXJsZ2VuLjc5N3g3OTcuc2RyLmYyOTM1MC5kZWZhdWx0X2ltYWdlLmMyIn0&_nc_ht=instagram.fpoa11-1.fna.fbcdn.net&_nc_cat=111&_nc_oc=Q6cZ2QFf4D-8hLche7Vhj4tknzsgW0u6tCMuEyr6faB_DDqRoA4KGaQWflsZy9ESE66BNaaUw3PpgLAp-e80LXyK97Ec&_nc_ohc=k_6gsKFI3jEQ7kNvwEHgcSu&_nc_gid=kSVlXkgmzyF2EKXrZ_QEQA&edm=APoiHPcBAAAA&ccb=7-5&ig_cache_key=MzA5Nzc4Njg5MDE2NTk1OTYyOQ%3D%3D.3-ccb7-5&oh=00_Afm8uce0DOW_NuXi9-BqVY8OgizGEB2S9Hf999Wd7vA9dg&oe=694F20AA&_nc_sid=22de04" alt="Imagem 2">
+      <img src="https://instagram.fpoa11-2.fna.fbcdn.net/v/t51.29350-15/320220095_6594609553887211_3772977124778524110_n.jpg?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkZFRUQuaW1hZ2VfdXJsZ2VuLjE0NDB4MTgwMC5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UuYzIifQ&_nc_ht=instagram.fpoa11-2.fna.fbcdn.net&_nc_cat=107&_nc_oc=Q6cZ2QFf4D-8hLche7Vhj4tknzsgW0u6tCMuEyr6faB_DDqRoA4KGaQWflsZy9ESE66BNaaUw3PpgLAp-e80LXyK97Ec&_nc_ohc=Y0YazIIB1F0Q7kNvwGfk7FB&_nc_gid=kSVlXkgmzyF2EKXrZ_QEQA&edm=APoiHPcBAAAA&ccb=7-5&ig_cache_key=Mjk5NTIxNzk2Mjc2OTIyNjYzMA%3D%3D.3-ccb7-5&oh=00_AflMZzc8fKo7G2YZxVsHV3pI1aUrf9_kZflNdXb31udypw&oe=694F4CA1&_nc_sid=22de04" alt="Imagem 3">
+      <img src="https://instagram.fpoa11-1.fna.fbcdn.net/v/t51.29350-15/271465565_680930889767642_3500070280930479866_n.webp?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkZFRUQuaW1hZ2VfdXJsZ2VuLjEwODB4MTA4MC5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UuYzIifQ&_nc_ht=instagram.fpoa11-1.fna.fbcdn.net&_nc_cat=102&_nc_oc=Q6cZ2QHG3aPJ3ReewQnW-QLIt7mOHYTNEGOpPQY98Hz2FVB7H6Z7VWejuqxs0q061EBKs0vJO0TfGsJCz-P73oEV54Ye&_nc_ohc=YJ1fMEw9IusQ7kNvwGaN3l-&_nc_gid=JLSrMYk9OaXKaaYuX2R8fQ&edm=APoiHPcBAAAA&ccb=7-5&ig_cache_key=Mjc0NTU3NTEyMjU1NzU2NzIwNg%3D%3D.3-ccb7-5&oh=00_AfkhxaBSZPOEBuec7SRheKooG5QrUG9Ky4S4TtuPeKPR1Q&oe=694F44B1&_nc_sid=22de04" alt="Imagem 4">
+      <img src="https://instagram.fpoa11-1.fna.fbcdn.net/v/t51.29350-15/253034949_5126617260686052_3602400282562647889_n.jpg?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkZFRUQuaW1hZ2VfdXJsZ2VuLjEwODB4MTA4MC5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UuYzIifQ&_nc_ht=instagram.fpoa11-1.fna.fbcdn.net&_nc_cat=100&_nc_oc=Q6cZ2QFycsF6XhhpIVFNtTr5Iq_fpEOROtl1yxqGxVyurD8zX8aGOqj_8ddQKm_jcNIKS6N27eewZZAcdLutxCm7NA4y&_nc_ohc=zpe_mavwkbcQ7kNvwEgXur2&_nc_gid=8fcK6guTe41rM_OaeCl85A&edm=APoiHPcBAAAA&ccb=7-5&ig_cache_key=MjcwMDI5ODk5NTM0MTU4NDE1Mw%3D%3D.3-ccb7-5&oh=00_Afmus9kDXvgPaP0YmNuUfo1zM-LZNkb-bZVj_YggN3gTIg&oe=694F511A&_nc_sid=22de04" alt="Imagem 5">
+      <img src="https://instagram.fpoa11-1.fna.fbcdn.net/v/t51.29350-15/292050170_406538248165753_1303359531864438728_n.jpg?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkZFRUQuaW1hZ2VfdXJsZ2VuLjE0NDB4MTUxMy5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UuYzIifQ&_nc_ht=instagram.fpoa11-1.fna.fbcdn.net&_nc_cat=101&_nc_oc=Q6cZ2QFCsrUjoEPJ-iWnLU5-vMilgsEcE-oMyhO_kcPVNRmMJzxNSqiAFliB7sK-LSidCyTbNBFC_NJM_KLkd-ySaRS-&_nc_ohc=c9EoMmWJwhoQ7kNvwHLE73D&_nc_gid=Ez9zH-N40FZJMoZLTy7mQw&edm=APoiHPcBAAAA&ccb=7-5&ig_cache_key=Mjg3NjQyMjI3Mzc4MDgwNTgyOQ%3D%3D.3-ccb7-5&oh=00_AfltzL1_b3KTQWx-DrLiAZ2dRn6wLBKKgFpRZeccSmQSNA&oe=694F2B7D&_nc_sid=22de04" alt="Imagem 6">
+      <img src="https://instagram.fpoa11-1.fna.fbcdn.net/v/t51.29350-15/207619730_222392746379016_2955329602456159578_n.jpg?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkZFRUQuaW1hZ2VfdXJsZ2VuLjcyMHg3MjAuc2RyLmYyOTM1MC5kZWZhdWx0X2ltYWdlLmMyIn0&_nc_ht=instagram.fpoa11-1.fna.fbcdn.net&_nc_cat=100&_nc_oc=Q6cZ2QHbS60U0a9oOgDgGaG9CcPtO3VhpsHSMnfQXOiZPFqOXF8CYciH-enM3LDrps2mLWT1UFJm8I7d1FgVBSV5M9Gp&_nc_ohc=tpBWGootIZgQ7kNvwGgVkGF&_nc_gid=gyIm38RNJVNSKcCTMAdNnA&edm=APoiHPcBAAAA&ccb=7-5&ig_cache_key=MjYwNDU5ODE5ODUyNDgyOTY3OA%3D%3D.3-ccb7-5&oh=00_AfkL5CtYN4OMl22c0q5vUjDvjx2_YxxXkvbbeURHjjWKUA&oe=694F4EA5&_nc_sid=22de04" alt="Imagem 7">
+      <img src="https://instagram.fpoa11-1.fna.fbcdn.net/v/t51.29350-15/118235406_3457200177634055_78244626999637394_n.jpg?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkZFRUQuaW1hZ2VfdXJsZ2VuLjEwODB4MTA4MC5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UuYzIifQ&_nc_ht=instagram.fpoa11-1.fna.fbcdn.net&_nc_cat=111&_nc_oc=Q6cZ2QH-P66pFU8sXwuCoZXPa2RdW44C4uMGdqpR6YlONpIHtukmRO-SwAb1MlJVGuGcfwEP7Bd5X5Cy5pEJolZAyW36&_nc_ohc=YUM-b3EMJFYQ7kNvwGgEuDd&_nc_gid=3CQ-V6JtKLE6BnwP5iliNg&edm=APoiHPcBAAAA&ccb=7-5&ig_cache_key=MjM3ODQ1Mzc5NDI0Mjc5MTk3OA%3D%3D.3-ccb7-5&oh=00_AfnnvTiWXfLmnhJzOjuKXakHbsGdRoV7_5pUBpdnl2h5WA&oe=694F2989&_nc_sid=22de04" alt="Imagem 8">
+      <img src="https://instagram.fpoa11-1.fna.fbcdn.net/v/t51.29350-15/225806778_567392567627386_4471368043208453395_n.jpg?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkZFRUQuaW1hZ2VfdXJsZ2VuLjEwODB4MTA4MC5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UuYzIifQ&_nc_ht=instagram.fpoa11-1.fna.fbcdn.net&_nc_cat=110&_nc_oc=Q6cZ2QFycsF6XhhpIVFNtTr5Iq_fpEOROtl1yxqGxVyurD8zX8aGOqj_8ddQKm_jcNIKS6N27eewZZAcdLutxCm7NA4y&_nc_ohc=UUh1Jt6ttW8Q7kNvwEFcefm&_nc_gid=8fcK6guTe41rM_OaeCl85A&edm=APoiHPcBAAAA&ccb=7-5&ig_cache_key=MjYyNzQyODQ4NjY2MTQ0MTA2NQ%3D%3D.3-ccb7-5&oh=00_AfmDj5kMHPFSF8SZH6D9HDtkYWRjFgKR0QZbRdZN0jyLVw&oe=694F2E05&_nc_sid=22de04" alt="Imagem 9">
     </div>
   </section>
 
   <section id="contato" class="contato">
     <h2>Contato</h2>
     <p>
+      Clique no número e agende seu horário!
       📞 WhatsApp: <a href="https://wa.me/5551980583680">(51) 98058-3680</a><br>
       📍 Endereço: Nestor de Moura Jardim, 475 - Gravataí - RS
     </p>
