--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
   <section id="contato" class="contato">
     <h2>Contato</h2>
     <p>
-      Clique no número e agende seu horário!
+      Clique no número e agende seu horário!<br>
       📞 WhatsApp: <a href="https://wa.me/5551980583680">(51) 98058-3680</a><br>
       📍 Endereço: Nestor de Moura Jardim, 475 - Gravataí - RS
     </p>
