--- a/index.html
+++ b/index.html
@@ -265,14 +265,16 @@
     <p>
       Clique no número e agende seu horário!<br>
       📞 WhatsApp: <a href="https://wa.me/5551980583680">(51) 98058-3680</a><br>
-      📍 Endereço: Nestor de Moura Jardim, 475 - Gravataí - RS
+      Email: contato@dvargasbarber.com.br<br>
+      📍 Endereço: RUA IBIRAPUITA, 80 APT 101, SALGADO FILHO - Gravataí - RS
     </p>
   </section>
 
   <footer>
     <p>
-      DVargas Barber Shop<br>
-      CNPJ: 49.498.848/0001-81
+    49.498.848 DVARGAS BARBER SHOP<br>
+    CNPJ: 49.498.848/0001-81<br>
+    RUA IBIRAPUITA, 80 APT 101, SALGADO FILHO - Gravataí - RS
     </p>
   </footer>
 
