--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
   <footer>
     <p>
-    49.498.848 DVARGAS BARBER SHOP<br>
+    49.498.848 DAVID VARGAS DE LIMA<br>
     CNPJ: 49.498.848/0001-81<br>
     RUA IBIRAPUITA, 80 APT 101, SALGADO FILHO - Gravataí - RS
     </p>
