--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <p>
     49.498.848 DAVID VARGAS DE LIMA<br>
     CNPJ: 49.498.848/0001-81<br>
-    RUA IBIRAPUITA, 80 APT 101, SALGADO FILHO - Gravataí - RS
+    RUA IBIRAPUITA, 80 APT 101, SALGADO FILHO, CEP 94025-000, 8683 - RS
     </p>
   </footer>
 
